test/test_suite/errors/error_union.c3
module foo;

errtype Blurg
{
    X, Y, Z
}

func void main()
{
    anyerr foo;
}